[gd_scene load_steps=3 format=3 uid="uid://bxvbcus4651uf"]

[ext_resource type="Script" path="res://scenes/menu/start/level_select.gd" id="1_n0ap1"]
[ext_resource type="Texture2D" uid="uid://bpwx5r5w61jwr" path="res://assets/art_assets/level_select_skisse.png" id="2_r1kgq"]

[node name="LevelSelect" type="Node"]
script = ExtResource("1_n0ap1")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1600.0
offset_bottom = 720.0
texture = ExtResource("2_r1kgq")
expand_mode = 2

[node name="CutsceneButton" type="Button" parent="."]
offset_left = 1329.0
offset_top = 485.0
offset_right = 1455.0
offset_bottom = 558.0
action_mode = 0
text = "cutscene?"

[node name="ForestButton" type="Button" parent="."]
offset_left = 996.0
offset_top = 531.0
offset_right = 1082.0
offset_bottom = 603.0
text = "forest"

[node name="MountainButton" type="Button" parent="."]
offset_left = 530.0
offset_top = 542.0
offset_right = 653.0
offset_bottom = 605.0
text = "mountain"

[node name="BackButton" type="Button" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 236.0
offset_bottom = 69.0
text = "Tilbake til menyen"

[connection signal="pressed" from="CutsceneButton" to="." method="_on_cutscene_button_pressed"]
[connection signal="pressed" from="ForestButton" to="." method="_on_forest_button_pressed"]
[connection signal="pressed" from="MountainButton" to="." method="_on_mountain_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
